move Local.* to rct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ install(FILES
         src/rct/List.h
         src/rct/Log.h
         src/rct/Map.h
+        src/rct/LocalClient.h
+        src/rct/LocalServer.h
         src/rct/Memory.h
         src/rct/MemoryMonitor.h
         src/rct/Mutex.h
