Put source and header files in the same (rct) directory. This makes it easier to jump from source to header file and vice versa

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,48 +8,48 @@ install(TARGETS rct DESTINATION lib COMPONENT rct EXPORT rct)
 
 install(FILES
         ${CMAKE_CURRENT_BINARY_DIR}/include/rct/rct-config.h
-        src/rct/Connection.h
-        src/rct/Config.h
-        src/rct/Event.h
-        src/rct/EventLoop.h
-        src/rct/EventReceiver.h
-        src/rct/FastDelegate.h
-        src/rct/FileSystemWatcher.h
-        src/rct/List.h
-        src/rct/Log.h
-        src/rct/Map.h
-        src/rct/SocketClient.h
-        src/rct/SocketServer.h
-        src/rct/Memory.h
-        src/rct/MemoryMonitor.h
-        src/rct/Message.h
-        src/rct/Messages.h
-        src/rct/Mutex.h
-        src/rct/MutexLocker.h
-        src/rct/Path.h
-        src/rct/Point.h
-        src/rct/Process.h
-        src/rct/Rct.h
-        src/rct/ReadLocker.h
-        src/rct/ReadWriteLock.h
-        src/rct/Rect.h
-        src/rct/RegExp.h
-        src/rct/ResponseMessage.h
-        src/rct/SHA256.h
-        src/rct/Semaphore.h
-        src/rct/Serializer.h
-        src/rct/Set.h
-        src/rct/SharedMemory.h
-        src/rct/SignalSlot.h
-        src/rct/Size.h
-        src/rct/StopWatch.h
-        src/rct/String.h
-        src/rct/Thread.h
-        src/rct/ThreadLocal.h
-        src/rct/ThreadPool.h
-        src/rct/Value.h
-        src/rct/WaitCondition.h
-        src/rct/WriteLocker.h
+        rct/Connection.h
+        rct/Config.h
+        rct/Event.h
+        rct/EventLoop.h
+        rct/EventReceiver.h
+        rct/FastDelegate.h
+        rct/FileSystemWatcher.h
+        rct/List.h
+        rct/Log.h
+        rct/Map.h
+        rct/SocketClient.h
+        rct/SocketServer.h
+        rct/Memory.h
+        rct/MemoryMonitor.h
+        rct/Message.h
+        rct/Messages.h
+        rct/Mutex.h
+        rct/MutexLocker.h
+        rct/Path.h
+        rct/Point.h
+        rct/Process.h
+        rct/Rct.h
+        rct/ReadLocker.h
+        rct/ReadWriteLock.h
+        rct/Rect.h
+        rct/RegExp.h
+        rct/ResponseMessage.h
+        rct/SHA256.h
+        rct/Semaphore.h
+        rct/Serializer.h
+        rct/Set.h
+        rct/SharedMemory.h
+        rct/SignalSlot.h
+        rct/Size.h
+        rct/StopWatch.h
+        rct/String.h
+        rct/Thread.h
+        rct/ThreadLocal.h
+        rct/ThreadPool.h
+        rct/Value.h
+        rct/WaitCondition.h
+        rct/WriteLocker.h
         DESTINATION include/rct)
 
 install(EXPORT "rct" DESTINATION lib/cmake)
