Expand the apply template in the compile test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,12 +15,17 @@ check_cxx_source_compiles("
   #include <memory>
   #include <mutex>
   #include <tuple>
+  #include <string>
   #include <${CMAKE_CURRENT_LIST_DIR}/rct/Apply.h>
+
+  void callTest(int, std::string) { }
+
   int main(int, char**) {
       std::shared_ptr<int> ptr;
       std::mutex mtx;
       std::unique_lock<std::mutex> lock(mtx);
-      std::tuple<int, std::mutex> tpl;
+      std::tuple<int, std::string> tpl(5, std::string(\"foo\"));
+      applyMove(std::bind(callTest, std::placeholders::_1, std::placeholders::_2), tpl);
   }" HAVE_CXX11)
 
 if (NOT HAVE_CXX11)
