--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,28 @@ project(rct)
 include(rct.cmake)
 add_definitions(-DOS_${CMAKE_SYSTEM_NAME})
 add_library(rct STATIC ${RCT_SOURCES})
+#add_library(rct SHARED ${RCT_SOURCES})
+
+if ( HAVE_FAM EQUAL 1 )
+  message( STATUS "Using FAM via Gamin Library..." )
+  target_link_libraries(rct
+    ${GAMIN_LDFLAGS}
+    )
+endif()
+
+include_directories( 
+  /usr/local/include
+)
+
+target_link_libraries(rct
+  -L/usr/local/lib
+  -levent_pthreads
+  -levent
+)
 
 install(CODE "message(\"Installing rct...\")")
 install(TARGETS rct DESTINATION lib COMPONENT rct EXPORT rct)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wformat -std=c++0x")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -O0 -g -Wformat -std=gnu++0x")
 if (CMAKE_SYSTEM_NAME MATCHES "Darwin")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
 endif ()
