--- a/rct/rct-config.h.in
+++ b/rct/rct-config.h.in
@@ -7,6 +7,7 @@
 #cmakedefine HAVE_MACH_ABSOLUTE_TIME
 #cmakedefine HAVE_INOTIFY
 #cmakedefine HAVE_KQUEUE
+#cmakedefine HAVE_FAM
 #cmakedefine HAVE_EPOLL
 #cmakedefine HAVE_NOSIGPIPE
 #cmakedefine HAVE_NOSIGNAL
