--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,16 @@ cmake_minimum_required(VERSION 2.8)
 project(rct)
 include(rct.cmake)
 add_definitions(-DOS_${CMAKE_SYSTEM_NAME})
-if (CYGWIN)
-  add_library(rct SHARED ${RCT_SOURCES})
-else ()
-  add_library(rct STATIC ${RCT_SOURCES})
+add_library(rct SHARED ${RCT_SOURCES})
+
+if (CMAKE_SYSTEM_NAME MATCHES "Darwin")
+  find_library(CORESERVICES_LIBRARY CoreServices)
+  find_path(CORESERVICES_INCLUDE "CoreServices/CoreServices.h")
+  find_library(COREFOUNDATION_LIBRARY CoreFoundation)
+  find_path(COREFOUNDATION_INCLUDE "CoreFoundation/CoreFoundation.h")
 endif ()
+
+target_link_libraries(rct ${CORESERVICES_LIBRARY} ${COREFOUNDATION_LIBRARY})
 
 install(CODE "message(\"Installing rct...\")")
 install(TARGETS rct DESTINATION lib COMPONENT rct EXPORT rct)
