--- a/rct/rct-config.h.in
+++ b/rct/rct-config.h.in
@@ -16,6 +16,7 @@
 #cmakedefine HAVE_FSEVENTS
 #cmakedefine HAVE_STATMTIM
 #cmakedefine HAVE_CLOEXEC
+#cmakedefine HAVE_SCHEDIDLE
 #if !defined(HAVE_EPOLL) && !defined(HAVE_KQUEUE)
 #cmakedefine HAVE_SELECT
 #endif
