Use CommonCrypto on OS X

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,9 @@ endif ()
 if (CMAKE_SYSTEM_NAME MATCHES "Linux")
   set(RCT_SYSTEM_LIBRARIES dl)
 endif ()
-list(APPEND RCT_SYSTEM_LIBRARIES crypto)
+if (NOT CMAKE_SYSTEM_NAME MATCHES "Darwin")
+  list(APPEND RCT_SYSTEM_LIBRARIES crypto)
+endif()
 
 target_link_libraries(rct ${CORESERVICES_LIBRARY} ${COREFOUNDATION_LIBRARY} ${RCT_SYSTEM_LIBRARIES})
 
