Compile test for SHM_DEST

--- a/rct/rct-config.h.in
+++ b/rct/rct-config.h.in
@@ -17,6 +17,7 @@
 #cmakedefine HAVE_STATMTIM
 #cmakedefine HAVE_CLOEXEC
 #cmakedefine HAVE_SCHEDIDLE
+#cmakedefine HAVE_SHMDEST
 #if !defined(HAVE_EPOLL) && !defined(HAVE_KQUEUE)
 #cmakedefine HAVE_SELECT
 #endif
