Added a base for unit tests and a sample unit test for Date::setTime.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,7 @@ include(rct.cmake)
 # add_executable(dbtest rct/dbtest.cpp)
 # target_link_libraries(dbtest rct)
 
-
+if (WITH_TESTS)
+    add_subdirectory(tests)
+endif ()
 
