Fix setting of GCOV_TOOL variable to actually get the value of the variable and not just its name.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ if (WITH_TESTS)
             VERBATIM
         )
 
-        set(GCOV_TOOL GCOV_EXECUTABLE)
+        set(GCOV_TOOL ${GCOV_EXECUTABLE})
     endif ()
 
     find_program(LCOV_EXECUTABLE NAMES lcov)
