--- a/.travis.yml
+++ b/.travis.yml
@@ -43,17 +43,17 @@ matrix:
                       - clang-3.5
                       - libcppunit-dev
 
-        - env: COMPILER_VERSION=3.6
-          os: linux
-          compiler: clang++
-          addons:
-              apt:
-                  sources:
-                      - ubuntu-toolchain-r-test
-                      - llvm-toolchain-precise-3.6
-                  packages:
-                      - clang-3.6
-                      - libcppunit-dev
+        # - env: COMPILER_VERSION=3.6
+        #   os: linux
+        #   compiler: clang++
+        #   addons:
+        #       apt:
+        #           sources:
+        #               - ubuntu-toolchain-r-test
+        #               - llvm-toolchain-precise-3.6
+        #           packages:
+        #               - clang-3.6
+        #               - libcppunit-dev
 
 #        - env: COMPILER_VERSION=3.7
 #          os: linux
