Path compiles on windows; preparations for test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,30 +2,34 @@ cmake_minimum_required(VERSION 2.8)
 
 project(rct_tests C CXX)
 
-include(FindPkgConfig)
-pkg_search_module(CPPUNIT REQUIRED cppunit)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
+include(FindCPPUNIT)
+find_package(CPPUNIT REQUIRED)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CPPUNIT_CFLAGS}")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -Weffc++ -frtti")
-
-add_definitions(
-    ${CPPUNIT_CFLAGS_OTHER}
-)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -frtti")
 
 include_directories(
     ${PROJECT_BINARY_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/..
+    ${CMAKE_CURRENT_SOURCE_DIR}/../include
     ${CPPUNIT_INCLUDEDIR}
 )
 
-file(GLOB UNIT_TESTS_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
+if (CMAKE_SYSTEM_NAME MATCHES "Windows")
+  add_definitions(-D_WIN32_WINNT=_WIN32_WINNT_VISTA)
+endif ()
 
 link_directories(${CPPUNIT_LIBRARY_DIRS} ${PROJECT_BINARY_DIR})
 
 set(BINARY_NAME "rct_tests")
-add_executable(${BINARY_NAME} ${UNIT_TESTS_SRCS})
+add_executable(${BINARY_NAME} main.cpp DateTestSuite.cpp)
 target_link_libraries(${BINARY_NAME} ${CPPUNIT_LIBRARIES} rct)
 
 add_test("unittests" ${CMAKE_CURRENT_BINARY_DIR}/${BINARY_NAME})
+
+add_executable("Path_tests"
+  ../rct/Path.cpp ../rct/Rct.cpp ../rct/Log.cpp smallMain.cpp PathTestSuite.cpp)
+target_link_libraries("Path_tests" ${CPPUNIT_LIBRARIES} Ws2_32)
