Some more changes and test cases for Path on windows

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,7 +15,7 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/..
     ${CMAKE_CURRENT_SOURCE_DIR}/../include
-    ${CPPUNIT_INCLUDEDIR}
+    ${CPPUNIT_INCLUDE_DIRS}
 )
 
 if (CMAKE_SYSTEM_NAME MATCHES "Windows")
@@ -31,5 +31,5 @@ target_link_libraries(${BINARY_NAME} ${CPPUNIT_LIBRARIES} rct)
 add_test("unittests" ${CMAKE_CURRENT_BINARY_DIR}/${BINARY_NAME})
 
 add_executable("Path_tests"
-  ../rct/Path.cpp ../rct/Rct.cpp ../rct/Log.cpp smallMain.cpp PathTestSuite.cpp)
+  ../rct/Path.cpp ../rct/Rct.cpp ../rct/Log.cpp main.cpp PathTestSuite.cpp)
 target_link_libraries("Path_tests" ${CPPUNIT_LIBRARIES} Ws2_32)
