Made path tests work on Linux

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(CPPUNIT REQUIRED)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CPPUNIT_CFLAGS}")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -frtti")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -frtti -std=c++11")
 
 include_directories(
     ${PROJECT_BINARY_DIR}
@@ -22,10 +22,10 @@ if (CMAKE_SYSTEM_NAME MATCHES "Windows")
   add_definitions(-D_WIN32_WINNT=_WIN32_WINNT_VISTA)
 endif ()
 
-link_directories(${CPPUNIT_LIBRARY_DIRS} ${PROJECT_BINARY_DIR})
+link_directories(${CPPUNIT_LIBRARY_DIRS} ${PROJECT_BINARY_DIR} ${RCT_BINARY_DIR})
 
 set(BINARY_NAME "rct_tests")
-add_executable(${BINARY_NAME} main.cpp DateTestSuite.cpp)
+add_executable(${BINARY_NAME} main.cpp DateTestSuite.cpp PathTestSuite.cpp)
 target_link_libraries(${BINARY_NAME} ${CPPUNIT_LIBRARIES} rct)
 
 add_test("unittests" ${CMAKE_CURRENT_BINARY_DIR}/${BINARY_NAME})
