Commented out more stuff on windows
Plugin, Semaphore, SharedMemory are not used by rtags

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -35,7 +35,11 @@ add_test("unittests" ${CMAKE_CURRENT_BINARY_DIR}/${BINARY_NAME})
 set(WIN_RCT_SOURCES Path.cpp Rct.cpp Log.cpp WindowsUnicodeConversion.cpp
   Buffer.cpp Config.cpp Value.cpp Date.cpp Connection.cpp EventLoop.cpp
   SocketClient.cpp Message.cpp String.cpp FileSystemWatcher_win32.cpp
-  MemoryMonitor.cpp MessageQueue.cpp)
+  MemoryMonitor.cpp MessageQueue.cpp Plugin.cpp ReadWriteLock.cpp
+  SHA256.cpp ScriptEngine.cpp Thread.cpp ThreadPool.cpp Timer.cpp
+  Semaphore.cpp SharedMemory.cpp)
+
+#missing: Process.cpp
 
 foreach(l IN LISTS WIN_RCT_SOURCES)
   list(APPEND WIN_RCT_SOURCES_PREPENDED ../rct/${l})
