--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,12 +25,13 @@ endif ()
 
 link_directories(${CPPUNIT_LIBRARY_DIRS} ${PROJECT_BINARY_DIR} ${RCT_BINARY_DIR})
 
-if (CMAKE_SYSTEM_NAME MATCHES "Windows")
-  set(RCT_TEST_SRCS main.cpp
-  PathTestSuite.cpp ProcessTestSuite.cpp)
-else ()
-  set(RCT_TEST_SRCS main.cpp
-  DateTestSuite.cpp PathTestSuite.cpp ProcessTestSuite.cpp)
+set(RCT_TEST_SRCS main.cpp
+                  PathTestSuite.cpp
+                  ProcessTestSuite.cpp
+                  MemoryMappedFileTestSuite.cpp)
+
+if (NOT CMAKE_SYSTEM_NAME MATCHES "Windows")
+  list(APPEND RCT_TEST_SRCS DateTestSuite.cpp)
 endif()
 
 set(BINARY_NAME "rct_tests")
