SHA256 uses MemoryMappedFile
Also, fixed zero-length MemoryMappedFile on Windows
and added multiple test cases

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,7 +27,8 @@ link_directories(${CPPUNIT_LIBRARY_DIRS} ${PROJECT_BINARY_DIR} ${RCT_BINARY_DIR}
 set(RCT_TEST_SRCS main.cpp
                   PathTestSuite.cpp
                   ProcessTestSuite.cpp
-                  MemoryMappedFileTestSuite.cpp)
+                  MemoryMappedFileTestSuite.cpp
+                  SHA256TestSuite.cpp)
 
 if (NOT CMAKE_SYSTEM_NAME MATCHES "Windows")
   list(APPEND RCT_TEST_SRCS DateTestSuite.cpp)
